# obstacleAvoidance_Cpp

./: .gitignore  HowToUse.md  Project_07_03.cbp  Project_07_03.depend  Project_07_03.layout  Projet_23_02.cbp  README.md  display_trajectory.py  main.cpp
Code_Python/Kalman_Tracking/: Data_Kalman_Corrected.txt  KalmanFilter.cpp  display_depth_cloud.py
Code_Python/Reconstruct_Trajectory/: data_reconstrutct_trajectory.txt  plot_reconstruction.py
Folders_Documents/: Notes.txt  Workaround_Movidius.txt
Folders_Documents/Code_Python/: Calib3D.py  analysis_realsense.py  bezier_test.py  display_trajectory.py  plot_logging_data.py  plot_morphing.py  plt_timing_evolution.py
Folders_Documents/Gazebo_worlds/: crossing_in_corridor.world  just_the_world.launch  my_ridgeback.launch  willowgarage_custom.world
Folders_Documents/Obstacle_Avoidance_Cpp/: main.cpp
Gazebo_worlds/: box_of_walls.world  config_rviz.rviz  my_ridgeback.launch  willowgarage_custom.world
Other_Documents/: Installation_Guide.txt  Installation_Guide_All.txt  Notes.txt
Other_Documents/Code_Python/: bezier_test.py  display_trajectory.py  plot_logging_data.py  save_frames.py
Other_Documents/Guides/: Documentation_Gmapping.txt  Experiments_Guide.txt  (+2 more)
PointCloudFiltering/: filter_for_dynamic.launch  filter_for_static.launch
Project_19_03/: Project_19_03.cbp  Project_19_03.cscope_file_list  Project_19_03.depend  Project_19_03.layout  cscope.out  display_trajectory.py  main.cpp  plot_morphing.py
catkin_ws/src/chapulina-gazebo_plugins/SetStaticPose/: CMakeLists.txt  SetStaticPose.cc  SetStaticPose.hh  shapes.world
catkin_ws/src_for_simulation/worlds_and_launchers/: package.xml
catkin_ws/src_for_simulation/worlds_and_launchers/launch/: all_in_one.launch  all_in_one_map_no_people.launch  all_in_one_people.launch  all_in_one_process.launch  filter_for_static.launch  filter_robot_arm.launch  just_the_world.launch  log_data_node.cpp  my_ridgeback.launch
catkin_ws/src_for_simulation/worlds_and_launchers/meshes/Long_corridor/: model.config  model.sdf
catkin_ws/src_for_simulation/worlds_and_launchers/world/: crossing_in_corridor.world
catkin_ws/src_for_simulation/worlds_and_launchers/worlds/: field_of_cylinders.world
include/: Attractor.h  Obstacle.h  ObstacleAvoidance.h  ObstacleReconstruction.h  SolverFunctions.h  State.h
obstacle_avoidance/: CMakeLists.txt  package.xml
process_occupancy_grid/: CMakeLists.txt
src/: Attractor.cpp  Obstacle.cpp  ObstacleAvoidance.cpp  ObstacleReconstruction.cpp  SolverFunctions.cpp  State.cpp
(+203 files in other folders)
